# my-img

./: .clang-format  .clang-tidy  .env  .gitattributes  .gitignore  ADAPTER_LAYER.md  AGENTS.md  CMakeLists.txt  Doxyfile  HIRES_FIX_LIBTORCH.md  IPAdapter.md  OPTIMIZATION_ROADMAP.md  README.md  ROADMAP.md  SD_GUIDE.md  SD_INTEGRATION.md  SD_UPGRADE_GUIDE.md  TODO.md  ai_code_index.py  apply_patches.sh  build.sh  claude.md  code_index.py  code_search.py  design.md  env.example  hires.sh  hires_3080.sh  hiresfix.md  img1.sh  img2.sh  img3.sh  img_3080.sh  img_4090d.sh  img_create.md  libTorchHiresfix.sh  setup.sh  stable-diffusion-cpp-architecture.md  stable-diffusion.cpp  symbol_index_v3.c  (+22 more)
docs/: ESRGAN.md  IMG2IMG.md  face-onnx-design.md  hires-fix-report.md  sd-engine-design.md
docs/api/html/: README_8md.html  ROADMAP_8md.html  annotated.html  cache_8cpp.html  cache_8cpp__incl.map  cache_8cpp__incl.md5  cache_8h.html  cache_8h__dep__incl.map  cache_8h__dep__incl.md5  cache_8h__incl.map  cache_8h__incl.md5  cache_8h_source.html  classes.html  classsdengine_1_1AddIntNode-members.html  classsdengine_1_1AddIntNode.html  classsdengine_1_1AddIntNode__inherit__graph.map  classsdengine_1_1AddIntNode__inherit__graph.md5  classsdengine_1_1CLIPTextEncodeNode-members.html  classsdengine_1_1CLIPTextEncodeNode.html  classsdengine_1_1CLIPTextEncodeNode__inherit__graph.map  classsdengine_1_1CLIPTextEncodeNode__inherit__graph.md5  classsdengine_1_1CannyEdgePreprocessorNode-members.html  classsdengine_1_1CannyEdgePreprocessorNode.html  classsdengine_1_1CannyEdgePreprocessorNode__coll__graph.md5  classsdengine_1_1CannyEdgePreprocessorNode__inherit__graph.map  classsdengine_1_1CheckpointLoaderSimpleNode-members.html  classsdengine_1_1CheckpointLoaderSimpleNode.html  classsdengine_1_1CheckpointLoaderSimpleNode__coll__graph.map  classsdengine_1_1CheckpointLoaderSimpleNode__coll__graph.md5  classsdengine_1_1ConstantIntNode-members.html  classsdengine_1_1ConstantIntNode.html  classsdengine_1_1ConstantIntNode__coll__graph.map  classsdengine_1_1ConstantIntNode__coll__graph.md5  classsdengine_1_1ControlNetApplyNode-members.html  classsdengine_1_1ControlNetApplyNode.html  classsdengine_1_1ControlNetLoaderNode.html  (+305 more)
docs/tutorials/: node-development.md
examples/workflows/: README.md  img2img.json  txt2img.json
hires-fix-backup/: README.md  common.cpp  common.cpp.patch  common.h  common.h.patch  hires-fix.patch  stable-diffusion-ext.h  stable-diffusion.cpp.patch  stable-diffusion.h  stable-diffusion.h.patch  vae.hpp  vae.hpp.patch
include/: stable-diffusion.h
patches/: 0001-feat-c-api-add-IPAdapter-support-parameters.patch  01_stable-diffusion.h.freeu.patch  01_stable-diffusion.h.patch  02_unet.hpp.freeu.patch  02_unet.hpp.patch  03_diffusion_model.hpp.freeu.patch  03_diffusion_model.hpp.patch  04_stable-diffusion.cpp.freeu.patch  04_stable-diffusion.cpp.patch  apply-to-4090d.sh  deep_hires_hook.patch  diff.sh  hires-fix-myimg.patch  hires-fix-stable-diffusion.patch  patch_sd_cpp.py  sd-engine-ext-header.patch  sd-engine-full.patch  sd.cpp-local-changes.patch  sdcpp-freeu-sag-integration.patch
patches/include/: stable-diffusion.h
patches/new/: 001-include-and-hooks.patch  002-sampling-hooks.patch  003-hook-setters.patch  004-node-api.patch  apply-modular-patches.sh
patches/src/: diffusion_model.hpp  stable-diffusion.cpp  unet.hpp
patches/stable-diffusion.cpp-patched/: common.cpp  common.h  denoiser.hpp  ggml_extend.hpp  stable-diffusion.h  tensor.hpp  vae.hpp
scripts/: build_sd_cpp_3080.sh  build_sd_cpp_4090d.sh  convert_clip_vision.py  convert_preprocessor_models.py  convert_to_onnx.py  create_ipadapter_proj.py  download_advanced_models.sh  eval_clip_similarity.py  hires_3080.sh  hires_4090d.sh  img.sh  img_3080.sh  regenerate_clip_vision_onnx.py  sdxl.sh  test_ipadapter_onnx.py
src/: main.cpp  stable-diffusion.cpp
src/adapters/: sdcpp_adapter.cpp  sdcpp_adapter.h
src/backend/: clip.cpp  model.cpp  model.h  sampler_base.cpp  sampler_base.h  unet.cpp  vae.cpp  z_image_model.cpp  z_image_model.h
src/cli/: cli.c  cli.h  cli_options.h  cli_parser.cpp  cli_parser.h  commands.c  workflow_parser.cpp  workflow_parser.h
src/engine/: cache.cpp  cache.h  executor.cpp  executor.h  node.cpp  node.h  workflow.cpp  workflow.h  workflow_builder.cpp
src/index/: cache.h  index_writer.c
src/pipeline/: photo_adjustment.cpp  photo_adjustment.h
src/sd-core/: deep_hires.cpp  deep_hires.h
src/sd-hires/: hires_upscaler.cpp  main.cpp
src/sd-img2img/: design.md  main.cpp  run.sh
src/sd-upscale/: main.cpp  run.sh
src/utils/: controlnet_preprocessors.cpp  controlnet_preprocessors.h  dehaze.cpp  dehaze.h  face_restoration.cpp  face_restoration.h  face_swap.cpp  face_swap.h  gguf_loader.cpp  gguf_loader.h  image_adjust.cpp  image_adjust.h  image_postproc.cpp  image_postproc.h  image_qa.cpp  image_qa.h  image_utils.cpp  image_utils.h  ipadapter.cpp  ipadapter.h  latent_ops.cpp  latent_ops.h  log.cpp  log.h  lut_loader.cpp  lut_loader.h  onnx_preprocessor.cpp  oom_handler.cpp  oom_handler.h  photo_maker.cpp  photo_maker.h  png_metadata.cpp  png_metadata.h  prompt_schedule.cpp  prompt_schedule.h  regional_prompting.cpp  regional_prompting.h  report_generator.cpp  report_generator.h  safetensors.cpp  (+13 more)
stable-diffusion.cpp-patched/: denoiser.hpp  stable-diffusion.h
stable-diffusion.cpp-patched/include/: stable-diffusion-ext.h
stable-diffusion.cpp-patched/src/: stable-diffusion.cpp
tests/: test_cache.cpp  test_conditioning_nodes.cpp  test_executor.cpp  test_face.cpp  test_gguf_loader.cpp  test_hash.cpp  test_hires_fix.cpp  test_hires_fix_real.cpp  test_image_nodes.cpp  test_image_postproc.cpp  test_image_qa.cpp  test_image_utils.cpp  test_log.cpp  test_main.cpp  test_nodes_registry.cpp  test_object_pool.cpp  test_oom_handler.cpp  test_preprocessor_nodes.cpp  test_sdcpp_adapter.cpp  test_shadow_effect.cpp  test_txt2img.cpp  test_vae.cpp  test_vae_nodes.cpp  test_watermark.cpp  test_workflow.cpp  test_workflow_builder.cpp  test_workflow_core.cpp  test_z_image_model.cpp  test_z_image_quick.cpp
(+233 files in other folders)
